Projects listing layout issues resolved

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13116,8 +13116,8 @@ p {
 
 @media(max-width: 500px) {
     .nft-project-item-img {
-        width: 140px;
-        height: 140px;
+        width: 170px;
+        height: 170px;
         aspect-ratio: 1
     }
 }
